hooks.stripe/manifest/deployment.template.yaml
##
# IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hooks-stripe
  namespace: service
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`app.leaflytics.io`) && PathPrefix(`/hooks/stripe`)
      priority: 10
      services:
        - kind: Service
          name: hooks-stripe
          namespace: service
          port: 80
          strategy: RoundRobin
          weight: 10
  tls:
    secretName: certificate
---

##
# Service
apiVersion: v1
kind: Service
metadata:
  name: hooks-stripe
  namespace: service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: s-hooks-stripe
---

##
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name:      s-hooks-stripe
  namespace: service
  labels:
    app.kubernetes.io/name: s-hooks-stripe
    app.kubernetes.io/part-of: leaflytics
    app.kubernetes.io/version: 1.0.0
    subway.lavireo.com/name: service.hooks-stripe
    subway.lavireo.com/type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s-hooks-stripe
  template:
    metadata:
      labels:
        app: s-hooks-stripe
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: service
          image: ghcr.io/leaflytics/hooks-stripe:${VERSION}
      imagePullSecrets:
        - name: regcred
      serviceAccountName: s-hooks-stripe
---
